Extend validation, add JWT, add Extension methods

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
+
+  "TokenKey": "32-char string of text, very secret",
   
   "Logging": {
     "LogLevel": {
