--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,9 @@
     "ngx-bootstrap": "^7.0.0",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.1.3",
+    "node": "^17.0.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
